publish: Add validation for SIMD instructions
generated from commit c0ff7ae174b4c4012f6e116d32074bf2072bd7ad

--- a/core/syntax/instructions.html
+++ b/core/syntax/instructions.html
@@ -329,7 +329,7 @@ For the other integer instructions, the use of two’s complement for the signed
   \mathsf{min} ~|~
   \mathsf{max} \\
 \end{array}\end{split}\]</div>
-<p>SIMD instructions have a naming convention involving a prefix that
+<p id="syntax-simd-shape">SIMD instructions have a naming convention involving a prefix that
 determines how their operands will be interpreted.
 This prefix describes the <em>shape</em> of the operand,
 written <span class="math notranslate nohighlight">\(t\mathsf{x}N\)</span>, and consisting of a packed numeric type <span class="math notranslate nohighlight">\(t\)</span> and the number of <em>lanes</em> <span class="math notranslate nohighlight">\(N\)</span> of that type.
