--- a/core/syntax/instructions.html
+++ b/core/syntax/instructions.html
@@ -224,7 +224,7 @@ For the other integer instructions, the use of two’s complement for the signed
   \mathsf{f32x4} ~|~ \mathsf{f64x2} \\
 \def\mathdef1737#1{{}}\mathdef1737{shape} &amp; \href{../syntax/instructions.html#syntax-shape}{\mathit{shape}} &amp;::=&amp;
   \href{../syntax/instructions.html#syntax-shape}{\mathit{ishape}} ~|~ \href{../syntax/instructions.html#syntax-shape}{\mathit{fshape}} \\
-\def\mathdef1737#1{{}}\mathdef1737{lane index} &amp; \href{../syntax/instructions.html#syntax-laneidx}{\mathit{laneidx}} &amp;::=&amp; \href{../syntax/values.html#syntax-byte}{\mathit{byte}} \\
+\def\mathdef1737#1{{}}\mathdef1737{lane index} &amp; \href{../syntax/instructions.html#syntax-laneidx}{\mathit{laneidx}} &amp;::=&amp; \href{../syntax/values.html#syntax-int}{\mathit{u8}} \\
 \def\mathdef1737#1{{}}\mathdef1737{instruction} &amp; \href{../syntax/instructions.html#syntax-instr}{\mathit{instr}} &amp;::=&amp;
   \dots \\&amp;&amp;|&amp;
   \mathsf{v128.}\href{../syntax/instructions.html#syntax-instr-simd}{\mathsf{const}}~\href{../syntax/values.html#syntax-int}{\mathit{i128}} \\&amp;&amp;|&amp;
@@ -320,14 +320,20 @@ For the other integer instructions, the use of two’s complement for the signed
 \def\mathdef1737#1{{}}\mathdef1737{SIMD floating-point unary operator} &amp; \href{../syntax/instructions.html#syntax-vfunop}{\mathit{vfunop}} &amp;::=&amp;
   \mathsf{abs} ~|~
   \mathsf{neg} ~|~
-  \mathsf{sqrt} \\
+  \mathsf{sqrt} ~|~
+  \mathsf{ceil} ~|~
+  \mathsf{floor} ~|~
+  \mathsf{trunc} ~|~
+  \mathsf{nearest} \\
 \def\mathdef1737#1{{}}\mathdef1737{SIMD floating-point binary operator} &amp; \href{../syntax/instructions.html#syntax-vfbinop}{\mathit{vfbinop}} &amp;::=&amp;
   \mathsf{add} ~|~
   \mathsf{sub} ~|~
   \mathsf{mul} ~|~
   \mathsf{div} ~|~
   \mathsf{min} ~|~
-  \mathsf{max} \\
+  \mathsf{max} ~|~
+  \mathsf{pmin} ~|~
+  \mathsf{pmax} \\
 \end{array}\end{split}\]</div>
 <p id="syntax-simd-shape">SIMD instructions have a naming convention involving a prefix that
 determines how their operands will be interpreted.
